feat(airlines): implement airline controller, adapter, add tests
